# dirstat-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check-and-lint.yaml  release.yaml  test.yaml
src/: ffi.rs  lib.rs  main.rs  tests.rs
test-data/: README.md
test-data/pre-created/: b23_rand  b4000_rand_c  b4096_rand  b512_rand  b8000_rand_c  b8192_rand  rand_1000_c  text1_c.txt  text2_c.txt
