[package]
name = "dirstat-rs"
version = "0.3.5"
authors = ["scullionw <scuw1801@usherbrooke.ca>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A disk usage cli similar to windirstat"
repository = "https://github.com/scullionw/dirstat-rs"
keywords = ["cli", "disk", "usage", "tree", "windirstat"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.2.18"
rayon = "1.5.1"
pretty-bytes = "0.2.2"
termcolor = "1.1.2"
atty = "0.2.14"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.7"
features = ["winerror"]

[profile.release]
lto = 'fat'
codegen-units = 1
incremental = false

[[bin]]
bench = false
path = "src/bin/main.rs"
name = "ds"
